some refactoring and code optimization