@@ -1,22 +1,12 @@
-import com.fasterxml.jackson.annotation.JsonInclude;
-import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.SerializationFeature;
-import com.fasterxml.jackson.databind.ser.impl.SimpleFilterProvider;
 
-import java.text.ParseException;
-import java.text.SimpleDateFormat;
-import java.time.Duration;
-import java.time.Instant;
 import java.io.File;
 import java.io.IOException;
-import java.lang.reflect.Array;
 import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import static java.util.Arrays.stream;
 
@@ -27,10 +17,15 @@ public class Tickets {
             TicketWrapper wrapper = mapper.readValue(new File("tickets.json"), TicketWrapper.class);
             TicketClass[] tickets = wrapper.getTickets();
 
-            List<TicketClass> filteresFlights = filter_flights(tickets);
-            List<TicketClass> flight_duration = calculate_duration(filteresFlights);
+            List<TicketClass> filteredFlights = filter_flights(tickets);
+            List<TicketClass> flight_duration = calculate_duration(filteredFlights);
 
-            Map<String, Optional<Long>> minDurationByCarrier = flight_duration.stream()
+            // фильтрация рейсов по длительности полёта
+            List<TicketClass> validFlights = flight_duration.stream()
+                    .filter(ticket -> ticket != null && ticket.getDuration() >= 0)
+                    .collect(Collectors.toList());
+
+            Map<String, Optional<Long>> minDurationByCarrier = validFlights.stream()
                     .collect(Collectors.groupingBy(
                             TicketClass::getCarrier,
                             Collectors.mapping(
@@ -49,19 +44,32 @@ public class Tickets {
                 }
             });
 
-            // список цен
-            List<Integer> prices = flight_duration.stream()
-                    .map(TicketClass::getPrice).sorted()
+            List<Integer> prices = validFlights.stream()
+                    .map(TicketClass::getPrice)
+                    .filter(price -> price != null)
+                    .sorted()
                     .collect(Collectors.toList());
-            // средняя цена
-            double averagePrice = prices.stream()
-                    .mapToInt(Integer::intValue)
-                    .average()
-                    .getAsDouble();
 
-            // Медианная цена
+            if (prices.isEmpty()) {
+                System.out.println("Нет данных о ценах для расчета");
+                return;
+            }
+
+            // средняя цена с проверкой
+            OptionalDouble averageOpt = prices.stream()
+                    .mapToInt(Integer::intValue)
+                    .average();
+
+            if (!averageOpt.isPresent()) {
+                System.out.println("Не удалось рассчитать среднюю цену");
+                return;
+            }
+
+            double averagePrice = averageOpt.getAsDouble();
+
+            // медианная цена
             double medianPrice = calculateMedian(prices);
-            // Разница между средней ценой и медианой
+            // разница между средней ценой и медианой
             double difference = averagePrice - medianPrice;
 
             System.out.printf("Средняя цена: %.2f рублей%n", averagePrice);
@@ -69,7 +77,9 @@ public class Tickets {
             System.out.printf("Разница между средней и медианной ценой: %.2f рублей%n", difference);
 
         } catch (IOException e) {
-            throw new RuntimeException(e);
+            System.err.println("Ошибка чтения файла: " + e.getMessage());
+        } catch (Exception e) {
+            System.err.println("Ошибка выполнения: " + e.getMessage());
         }
     }
 
@@ -79,12 +89,12 @@ public class Tickets {
         if (size == 0) return 0.0;
 
         if (size % 2 == 0) {
-            // Четное количество элементов - среднее двух центральных
+            // четное количество элементов - среднее двух центральных
             int mid1 = prices.get(size / 2 - 1);
             int mid2 = prices.get(size / 2);
             return (mid1 + mid2) / 2.0;
         } else {
-            // Нечетное количество элементов - центральный элемент
+            // нечетное количество элементов - центральный элемент
             return prices.get(size / 2);
         }
     }
@@ -99,11 +109,9 @@ public class Tickets {
                         );
                         ticket.setDuration(duration);
                     }
-
                     return ticket;
                 }).collect(Collectors.toList());
     }
-
 
     private static long calculate_flight_duration(String departureTime, String arrivalTime) {
         try {
@@ -121,19 +129,19 @@ public class Tickets {
 
             return durationMinutes;
         } catch (Exception e) {
+            System.err.println("Ошибка парсинга времени: " + e.getMessage());
             return -1;
         }
     }
 
-    private static List filter_flights(TicketClass[] tickets) {
+    private static List<TicketClass> filter_flights(TicketClass[] tickets) {
         //Владивосток и Тель-Авив
         List<TicketClass> flight = stream(tickets)
                 .filter(ticket -> ticket != null &&
                         (("VVO".equals(ticket.getOrigin()) && "TLV".equals(ticket.getDestination())) ||
                                 ("TLV".equals(ticket.getOrigin()) && "VVO".equals(ticket.getDestination()))))
-                .toList();
+                .collect(Collectors.toList());
 
         return flight;
     }
 }
-
